--- a/statamic-project/public/css/statameet.css
+++ b/statamic-project/public/css/statameet.css
@@ -1,6 +1,12 @@
 body {
-  background: linear-gradient(45deg, #f1fcf9, #9fe8d2, #4dd4ac) !important;
+  background: linear-gradient(45deg, #114435, #249775, #4dd4ac) !important;
   min-height: 100vh !important;
+}
+
+.btn-outline-light:hover {
+  color: #f8f9fa !important;
+  background-color: #4dd4ac !important;
+  border-color: #4dd4ac !important;
 }
 
 .btn-outline-primary:hover {
@@ -13,6 +19,10 @@ body {
 
 .content-container-sm {
   max-width: 400px !important;
+}
+
+.nav-link {
+  color: lightgrey !important;
 }
 
 /*# sourceMappingURL=statameet.css.map */
