--- a/statamic-project/resources/views/user/reset-pw.antlers.html
+++ b/statamic-project/resources/views/user/reset-pw.antlers.html
@@ -15,7 +15,7 @@
                 <button type="submit" class="btn btn-outline-primary w-100" >Reset</button>
             </div>
             {{ if errors }}
-            <div class="bg-red-300 text-white p-2">
+            <div class="alert alert-warning p-2">
                 {{ errors }}
                 {{ value }}<br>
                 {{ /errors }}
@@ -23,7 +23,7 @@
             {{ /if }}
 
             {{ if success }}
-            <div class="bg-green-300 text-white p-2">
+            <div class="alert alert-primary p-2">
                 {{ success }}<br>
             </div>
             {{ /if }}
