--- a/statamic-project/public/css/statameet.css
+++ b/statamic-project/public/css/statameet.css
@@ -3,6 +3,10 @@ body {
   min-height: 100vh !important;
 }
 
+hr {
+  border-top: 3px solid #4dd4ac;
+}
+
 .btn-outline-light:hover {
   color: #f8f9fa !important;
   background-color: #4dd4ac !important;
@@ -23,6 +27,10 @@ body {
 
 .nav-link {
   color: lightgrey !important;
+}
+
+.nav-link:hover {
+  color: #4dd4ac !important;
 }
 
 /*# sourceMappingURL=statameet.css.map */
