--- a/statamic-project/resources/views/layout.antlers.html
+++ b/statamic-project/resources/views/layout.antlers.html
@@ -10,6 +10,7 @@
                 </div>
             </div>
         </div>
+    {{ partial:footer }}
     {{ partial:scripts }}
     </body>
 </html>
