--- a/statamic-project/resources/views/templates/lectures/lecture.antlers.html
+++ b/statamic-project/resources/views/templates/lectures/lecture.antlers.html
@@ -31,12 +31,12 @@
     {{ /if }}
     {{ if parent:conference_link }}
     <li class="list-group-item d-flex flex-row"><strong class="me-1">Virtual Link:</strong>
-        {{ user:is role="admin|editor|participant" }}
+        {{ user:is role="participant" }}
         {{ user }}
         <span>{{ parent:conference_link}}</span>
         {{ /user }}
         {{ /user:is }}
-        {{ user:isnt role="admin|editor|participant" }}
+        {{ user:isnt role="participant" }}
         <i>need to be logged in</i>
         {{ /user:isnt  }}
     </li>
@@ -47,7 +47,7 @@
 
     <li class="list-group-item">
         <div class="btn-group btn-group-sm">
-            {{ user:is role="admin|editor|participant" }}
+            {{ user:is role="participant" }}
                 {{ user }}
                     {{ if abstract_file }}
                         {{ abstract_file }}
@@ -74,7 +74,7 @@
                     {{ /if }}
                 {{ /user }}
             {{ /user:is }}
-            {{ user:isnt role="admin|editor|participant" }}
+            {{ user:isnt role="participant" }}
                 <button type="button" class="btn btn-primary text-white" disabled>Abstract</button>
                 <button type="button" class="btn btn-primary text-white" disabled>Presentation</button>
                 <button type="button" class="btn btn-primary text-white" disabled>Handout</button>
