--- a/statamic-project/resources/views/user/forgot-password.antlers.html
+++ b/statamic-project/resources/views/user/forgot-password.antlers.html
@@ -6,6 +6,7 @@
 <div class="container-xl content-container content-container-sm" >
     <div class="card shadow">
         <div class="card-body">
+            {{ if logged_out }}
             {{ user:forgot_password_form reset_url="/reset-password" }}
             <div class="form-floating mt-1">
                 <input id="emailinput" type="text" name="email" value="{{ old:email }}" class="form-control">
@@ -27,9 +28,13 @@
                 {{ success }}<br>
             </div>
             {{ /if }}
-
-
             {{ /user:forgot_password_form }}
+            {{ else }}
+            <div class="d-flex justify-content-center">
+                <span class="alert alert-warning my-1">You are already logged in</span>
+            </div>
+
+            {{ /if }}
         </div>
     </div>
 </div>
