--- a/statamic-project/resources/views/user/login.antlers.html
+++ b/statamic-project/resources/views/user/login.antlers.html
@@ -18,6 +18,10 @@
             <div class="mt-1">
                 <button type="submit" class="btn btn-outline-primary w-100" >Log in</button>
             </div>
+            <div class="mt-1 d-flex justify-content-end">
+                <a class="text-mute text-decoration-none" href="/forgot-password"><small>Forgot your password?</small></a>
+            </div>
+
             <div class="mt-1">
                 {{ if errors }}
                 <div class="alert alert-warning p-2">
