event days and adjustments

--- a/statamic-project/resources/views/nav.antlers.html
+++ b/statamic-project/resources/views/nav.antlers.html
@@ -31,11 +31,13 @@
                     </a>
                     <ul class="dropdown-menu dropdown-menu-dark">
                         <li><a class="dropdown-item" href="/events">Overview</a></li>
-                        <li><hr class="dropdown-divider"></li>
                         {{ nav:events }}
-                        <li><a class="dropdown-item" href="{{url}}">{{ title }}</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><h6 class="dropdown-header">{{ date format="D, Y-m-d" }}</h6></li>
+                        {{ children }}
+                        <li><a href="{{ url }}" class="dropdown-item" >{{ title }}</a></li>
+                        {{ /children }}
                         {{ /nav:events }}
-
                     </ul>
                 </li>
             </ul>
