--- a/statamic-project/resources/views/pages/events.antlers.html
+++ b/statamic-project/resources/views/pages/events.antlers.html
@@ -6,26 +6,53 @@
         <div class="container-xl content-container" >
             <div class="card shadow">
                 <div class="card-body">
-                    <div class="accordion accordion-flush" id="eventAccordion">
+                    <ul class="list-group list-group-flush border border-primary rounded-3">
                         {{ nav:events }}
-                        <div class="accordion-item">
-                            <h2 class="accordion-header" id="{{ slug }}heading">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse-{{ slug }}" aria-expanded="false" aria-controls="flush-collapseOne">
-                                    {{title}}
-                                </button>
-                            </h2>
-                            <div id="flush-collapse-{{ slug }}" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                                <div class="accordion-body">
-                                    <ul class="list-group list-group-flush">
-                                        {{ children }}
-                                        <a href="{{ url }}" class="list-group-item list-group-item-action">{{ title }}</a>
-                                        {{ /children }}
-                                    </ul>
+                        <li class="list-group-item d-flex flex-column" href="{{ url }}">
+                            <h4 class="text-center">{{ date format="l, Y-m-d" }}</h4>
+                            <div class="accordion accordion-flush" id="accordion{{ title }}">
+                                {{ children }}
+                                <div class="accordion-item">
+                                    <h2 class="accordion-header" id="heading{{ slug }}">
+                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{ slug }}" aria-expanded="false" aria-controls="flush-collapseOne">
+                                            <div class="d-flex flex-column">
+                                                <h5>{{ title }}</h5>
+                                                {{ if moderation }}
+                                                <small>
+                                                    <span>Moderation: </span>
+                                                    <span>{{ moderation }}{{ name }}{{ /moderation }}</span>
+                                                </small>
+                                                {{ /if }}
+                                            </div>
+                                        </button>
+                                    </h2>
+                                    <div id="collapse{{ slug }}" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                                        <div class="accordion-body">
+                                            <ul class="list-group list-group-flush">
+                                                {{ event_fields }}
+                                                <a href="{{ url }}" class="list-group-item list-group-item-action d-flex flex-column">
+                                                    <span>{{ title }}</span>
+                                                    <small>
+                                                        {{ if speakers }}
+                                                        {{ speakers }}
+                                                        {{ name }}{{ if last }}{{ else }}, {{ /if }}
+                                                        {{ /speakers }}
+                                                        {{ else }}
+                                                        <i>not set yet</i>
+                                                        {{ /if }}</small>
+                                                </a>
+                                                {{ /event_fields }}
+                                            </ul>
+
+                                        </div>
+                                    </div>
                                 </div>
+                                {{ /children }}
+
                             </div>
-                        </div>
+                        </li>
                         {{ /nav:events }}
-                    </div>
+                    </ul>
                 </div>
             </div>
         </div>
