--- a/statamic-project/resources/views/templates/event_groups/event-group.antlers.html
+++ b/statamic-project/resources/views/templates/event_groups/event-group.antlers.html
@@ -9,7 +9,7 @@
         <i>not set yet</i>
         {{ /if }}
     </li>
-    <li class="list-group-item d-flex flex-row"><strong class="me-1">Date:</strong><span>{{ date_input format="D, Y-m-d" }}</span></li>
+    <li class="list-group-item d-flex flex-row"><strong class="me-1">Date:</strong><span>{{ parent:date format="D, Y-m-d" }}</span></li>
     <li class="list-group-item d-flex flex-row"><strong class="me-1">Time:</strong><span>{{ starting_time }}{{ if ending_time }}-{{ ending_time }}{{ /if }}</span></li>
     {{ if location }}
     <li class="list-group-item d-flex flex-row"><strong class="me-1">Location:</strong><span>{{ location }}</span></li>
@@ -33,10 +33,18 @@
 <div class="py-3">
     <strong>Lectures</strong>
     <ul class="list-group list-group-flush border border-primary rounded-3">
-        {{ entries_field }}
-        <a href="{{ url }}" class="list-group-item list-group-item-action">
-            {{ title }}
+        {{ event_fields }}
+        <a href="{{ url }}" class="list-group-item list-group-item-action d-flex flex-column">
+            <span>{{ title }}</span>
+            <small>
+                {{ if speakers }}
+                {{ speakers }}
+                {{ name }}{{ if last }}{{ else }}, {{ /if }}
+                {{ /speakers }}
+                {{ else }}
+                <i>not set yet</i>
+                {{ /if }}</small>
         </a>
-        {{ /entries_field }}
+        {{ /event_fields }}
     </ul>
 </div>
