--- a/statamic-project/resources/views/templates/pages/home.antlers.html
+++ b/statamic-project/resources/views/templates/pages/home.antlers.html
@@ -11,20 +11,52 @@
 </div>
 <div class="py-3">
     <ul class="list-group list-group-flush border border-primary rounded-3">
-        {{ current_events }}
-        <a class="list-group-item list-group-item-action d-flex flex-column" href="{{ url }}">
-            <span>{{ title }}</span>
-            <small class="d-flex flex-row">
-                {{ if location }}<span class="me-1">{{ location }}</span>{{ /if}}
-                <span>
-                    {{ if date_input or starting_time and location }}<span> | </span>{{ /if }}
-                    {{ if date_input }}<span >{{ date_input format="Y-m-d" }}</span>{{ /if }}
-                    {{ if date_input and starting_time }}<span>, </span>{{ /if }}
-                    {{ if starting_time }}<span class="me-1">{{ starting_time }}{{ if ending_time }}-{{ ending_time }}{{ /if }}</span>{{ /if }}
-                </span>
-            </small>
-        </a>
-        {{ /current_events }}
+        {{ nav:events }}
+        <li class="list-group-item d-flex flex-column" href="{{ url }}">
+            <h4 class="text-center">{{ date format="l, Y-m-d" }}</h4>
+            <div class="accordion accordion-flush" id="accordion{{ title }}">
+                {{ children }}
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="heading{{ slug }}">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{ slug }}" aria-expanded="false" aria-controls="flush-collapseOne">
+                            <div class="d-flex flex-column">
+                                <h5>{{ title }}</h5>
+                                {{ if moderation }}
+                                <small>
+                                    <span>Moderation: </span>
+                                    <span>{{ moderation }}{{ name }}{{ /moderation }}</span>
+                                </small>
+                                {{ /if }}
+                            </div>
+                        </button>
+                    </h2>
+                    <div id="collapse{{ slug }}" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">
+                            <ul class="list-group list-group-flush">
+                                {{ event_fields }}
+                                <a href="{{ url }}" class="list-group-item list-group-item-action d-flex flex-column">
+                                    <span>{{ title }}</span>
+                                    <small>
+                                        {{ if speakers }}
+                                        {{ speakers }}
+                                        {{ name }}{{ if last }}{{ else }}, {{ /if }}
+                                        {{ /speakers }}
+                                        {{ else }}
+                                        <i>not set yet</i>
+                                        {{ /if }}</small>
+                                </a>
+
+                                {{ /event_fields }}
+                            </ul>
+
+                        </div>
+                    </div>
+                </div>
+                {{ /children }}
+
+            </div>
+        </li>
+        {{ /nav:events }}
     </ul>
 
 </div>
