--- a/statamic-project/resources/views/nav.antlers.html
+++ b/statamic-project/resources/views/nav.antlers.html
@@ -33,7 +33,7 @@
                         <li><a class="dropdown-item" href="/events">Overview</a></li>
                         {{ nav:events }}
                         <li><hr class="dropdown-divider"></li>
-                        <li><h6 class="dropdown-header">{{ date format="D, Y-m-d" }}</h6></li>
+                        <li><h6 class="dropdown-header">{{ date_day format="D, Y-m-d" }}</h6></li>
                         {{ children }}
                         <li><a href="{{ url }}" class="dropdown-item" >{{ title }}</a></li>
                         {{ /children }}
