--- a/statamic-project/resources/views/pages/events.antlers.html
+++ b/statamic-project/resources/views/pages/events.antlers.html
@@ -9,14 +9,14 @@
                     <ul class="list-group list-group-flush border border-primary rounded-3">
                         {{ nav:events }}
                         <li class="list-group-item d-flex flex-column" href="{{ url }}">
-                            <h4 class="text-center">{{ date format="l, Y-m-d" }}</h4>
+                            <h4 class="text-center">{{ date_day format="l, Y-m-d" }}</h4>
                             <div class="accordion accordion-flush" id="accordion{{ title }}">
                                 {{ children }}
                                 <div class="accordion-item">
                                     <h2 class="accordion-header" id="heading{{ slug }}">
                                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{ slug }}" aria-expanded="false" aria-controls="flush-collapseOne">
                                             <div class="d-flex flex-column">
-                                                <h5><span>{{ title }}<sup class="ms-1"><span>{{ starting_time }}{{ if ending_time }}-{{ ending_time }}{{ /if }}</span></sup></span></h5>
+                                                <h5><span>{{ title }}</span><sup class="ms-1 text-secondary">{{ starting_time }}{{ if ending_time }}-{{ ending_time }}{{ /if }}</sup></h5>
                                                 {{ if moderation }}
                                                 <small>
                                                     <span>Moderation: </span>
@@ -31,7 +31,7 @@
                                             <ul class="list-group list-group-flush">
                                                 {{ event_fields }}
                                                 <a href="{{ url }}" class="list-group-item list-group-item-action d-flex flex-column">
-                                                    <span>{{ title }}</span>
+                                                    <span><small class="me-1">{{ starting_time }}{{ if ending_time }}-{{ ending_time }}{{ /if }}</small><span>{{ title }}</span></span>
                                                     <small>
                                                         {{ if speakers }}
                                                         {{ speakers }}
@@ -39,16 +39,15 @@
                                                         {{ /speakers }}
                                                         {{ else }}
                                                         <i>not set yet</i>
-                                                        {{ /if }}</small>
+                                                        {{ /if }}
+                                                    </small>
                                                 </a>
                                                 {{ /event_fields }}
                                             </ul>
-
                                         </div>
                                     </div>
                                 </div>
                                 {{ /children }}
-
                             </div>
                         </li>
                         {{ /nav:events }}
