--- a/statamic-project/resources/views/templates/pages/home.antlers.html
+++ b/statamic-project/resources/views/templates/pages/home.antlers.html
@@ -20,7 +20,7 @@
                     <h2 class="accordion-header" id="heading{{ slug }}">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{ slug }}" aria-expanded="false" aria-controls="flush-collapseOne">
                             <div class="d-flex flex-column">
-                                <h5>{{ title }}</h5>
+                                <h5><span>{{ title }}</span><sup class="ms-1 text-secondary">{{ starting_time }}{{ if ending_time }}-{{ ending_time }}{{ /if }}</sup></h5>
                                 {{ if moderation }}
                                 <small>
                                     <span>Moderation: </span>
@@ -35,7 +35,7 @@
                             <ul class="list-group list-group-flush">
                                 {{ event_fields }}
                                 <a href="{{ url }}" class="list-group-item list-group-item-action d-flex flex-column">
-                                    <span>{{ title }}<sup class="ms-1"><span>{{ starting_time }}{{ if ending_time }}-{{ ending_time }}{{ /if }}</span></sup></span>
+                                    <span><small class="me-1">{{ starting_time }}{{ if ending_time }}-{{ ending_time }}{{ /if }}</small><span>{{ title }}</span></span>
                                     <small>
                                         {{ if speakers }}
                                         {{ speakers }}
